tests/invalid/undefined_variable/main.py
x: int = undefined_var + 1
